--- a/src/i18n/es/translation.json
+++ b/src/i18n/es/translation.json
@@ -4,6 +4,7 @@
   "loading": "Cargando...",
   "No weather data available": "No hay datos meteorológicos disponibles para esta ubicación.",
   "search placeholder": "Buscar una ciudad...",
+  "back to overview": "Volver a la vista general",
   "thunderstorm with light rain": "tormenta con lluvia ligera",
   "thunderstorm with rain": "tormenta con lluvia",
   "thunderstorm with heavy rain": "tormenta con lluvia intensa",
@@ -55,8 +56,8 @@
   "squalls": "rachas de viento",
   "tornado": "tornado",
   "clear sky": "cielo despejado",
-  "few clouds: 11–25%": "pocas nubes: 11–25%",
-  "scattered clouds: 25–50%": "nubes dispersas: 25–50%",
-  "broken clouds: 51–84%": "nubes rotas: 51–84%",
-  "overcast clouds: 85–100%": "nubes cubiertas: 85–100%"
+  "few clouds": "pocas nubes",
+  "scattered clouds": "nubes dispersas",
+  "broken clouds": "nubes rotas",
+  "overcast clouds": "nubes cubiertas"
 }
