--- a/src/i18n/en/translation.json
+++ b/src/i18n/en/translation.json
@@ -5,6 +5,7 @@
   "No weather data available": "No weather data available for this location.",
   "search placeholder": "Search for a city...",
   "back to overview": "Back to overview",
+  "City not found": "City not found",
   "monday": "Monday",
   "tuesday": "Tuesday",
   "wednesday": "Wednesday",
