--- a/src/i18n/es/translation.json
+++ b/src/i18n/es/translation.json
@@ -5,6 +5,7 @@
   "No weather data available": "No hay datos meteorológicos disponibles para esta ubicación.",
   "search placeholder": "Buscar una ciudad...",
   "back to overview": "Volver a la vista general",
+  "City not found": "Ciudad no encontrada",
   "thunderstorm with light rain": "tormenta con lluvia ligera",
   "thunderstorm with rain": "tormenta con lluvia",
   "thunderstorm with heavy rain": "tormenta con lluvia intensa",
