add more translations

--- a/src/i18n/en/translation.json
+++ b/src/i18n/en/translation.json
@@ -6,6 +6,8 @@
   "search placeholder": "Search for a city...",
   "back to overview": "Back to overview",
   "City not found": "City not found",
+  "City added successfully": "City added successfully",
+  "Location already exists": "Location already exists",
   "monday": "Monday",
   "tuesday": "Tuesday",
   "wednesday": "Wednesday",
