--- a/src/i18n/es/translation.json
+++ b/src/i18n/es/translation.json
@@ -8,6 +8,25 @@
   "City not found": "Ciudad no encontrada",
   "City added successfully": "Ciudad añadida con éxito",
   "Location already exists": "La ubicación ya existe",
+  "monday": "lunes",
+  "tuesday": "martes",
+  "wednesday": "miércoles",
+  "thursday": "jueves",
+  "friday": "viernes",
+  "saturday": "sábado",
+  "sunday": "domingo",
+  "january": "enero",
+  "february": "febrero",
+  "march": "marzo",
+  "april": "abril",
+  "may": "mayo",
+  "june": "junio",
+  "july": "julio",
+  "august": "agosto",
+  "september": "septiembre",
+  "october": "octubre",
+  "november": "noviembre",
+  "december": "diciembre",
   "thunderstorm with light rain": "tormenta con lluvia ligera",
   "thunderstorm with rain": "tormenta con lluvia",
   "thunderstorm with heavy rain": "tormenta con lluvia intensa",
